# biohackathon2024

./: .gitignore  .gitmodules  01_match_articles_with_biotools.ipynb  02_get_biotool_publication copy.ipynb  02_get_biotool_publication.ipynb  03_create_adjacency.ipynb  04_adjacency_to_cytoscape.ipynb  06_process_text_for_machine_learning.ipynb  07_train_model.ipynb  07_train_model.py  08_process_text_for_machine_learning_additional_annotations.ipynb  09_train_model_extra_annotations.py  Europe_PMC_to_Venn_diagrams.ipynb  README.md  mentions - montions.csv  pyproject.toml
XML2HTML/: PMC3587630.xml  XML2HTML.ipynb  transform.xsl
bh24_literature_mining/: machine_learning_tools.py
biohackrxiv/: paper.bib  paper.md
biotoolspub/: .biotoolspub_with_pmids4.tsv.swp  DetailedExampleTools.csv  adjacency_cites.pkl  adjancency_cites_filt.pkl  biotoolspub.tsv  biotoolspub_with_pmids4.tsv  biotoolspub_with_pmids8.tsv  biotoolspub_with_topic.tsv  tmp.csv  tool_names.txt
biotoolspub/fulltexts/: PMC10000431.xml  PMC10000440.xml  PMC10008064.xml  PMC10008288.xml  PMC10010469.xml  PMC10010602.xml  PMC10010604.xml  PMC10013729.xml  PMC10013792.xml  PMC10014309.xml  PMC10014624.xml  PMC10014671.xml  PMC10015272.xml  PMC10015468.xml  PMC10017094.xml  PMC10017096.xml  PMC10017117.xml  PMC10017698.xml  PMC10018348.xml  PMC10018366.xml  PMC10018448.xml  PMC10018737.xml  PMC10019025.xml  PMC10019661.xml  PMC10022679.xml  PMC10023195.xml  PMC10023204.xml  PMC10023220.xml  PMC10023222.xml  PMC10025401.xml  PMC10025408.xml  PMC10025432.xml  PMC10025434.xml  PMC10025436.xml  PMC10025439.xml  PMC10025448.xml  PMC10025548.xml  PMC10025582.xml  PMC10025764.xml  PMC10025771.xml  (+14983 more)
biotoolspub/training_annotations/: mentions_no_topic.csv  mentions_with_topics.csv
data/IOB/: dev_IOB.tsv  train_IOB.tsv
generated_data/: filtered_data.csv
graph_generation/graph_data/: cocitation_graph.cyjs  cocitation_style.json
handcrafted/: cites.tsv  counts_cased.tsv  counts_lower.tsv  counts_orig.tsv  handcrafted.py  jats.xslt
ml_training/: 01_data_preprocessing.ipynb  02_ml_training.ipynb
notebooks/: 00_download_articles.ipynb  05_handcrafted.ipynb  06_process_text_for_machine_learning.ipynb  07_train_model.ipynb  DownloadAndSaveArticles.ipynb  DownloadToolMentionings.ipynb  bio_tools_missing_publication.ipynb  bio_tools_to_text_mining.ipynb  biotools_to_text_mining.ipynb  comentions.ipynb  create_comentioning_graph.ipynb  data_for_training.ipynb  example.ipynb  handcrafted.ipynb  match_articles_with_biotools.ipynb  runcytoscape.ipynb
src/bh24_literature_mining/: bio.tools.py  (+10 more)
tests/: test_data_pipeline.py  test_eurpopepmc_api.py
(+8 files in other folders)
