[tool.poetry]
name = "bh24_literature_mining"
version = "0.1.0"
description = "Enhancing bio.tools by Semantic Literature Mining"
authors = ["Veit Schwämmle", "Magnus Palmblad"]
packages = [
    { include = "bh24_literature_mining", from = "src" }]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
numpy = "^2.1.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
europe-pmc = "1.0.0"
requests = "^2.32.3"
matplotlib = "^3.9.2"
wordcloud = "^1.9.3"
nltk = "^3.9.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
sentence-splitter = "^1.4"
scikit-learn = "^1.5.2"
pathlib = "^1.0.1"
igraph = "^0.11.8"
py4cytoscape = "^1.11.0"




[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-datadir = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
